Fix overlap of right sidebar and central area

--- a/app/assets/stylesheets/frontend/styles.css.sass
+++ b/app/assets/stylesheets/frontend/styles.css.sass
@@ -1717,7 +1717,7 @@ article
         left: 0
     .container
       padding-left: 0
-    @media (max-width: 768px)
+    @media (max-width: 980px)
       .container
         padding-right: 0
 
